--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,8 +8,9 @@
 </head>
 <body>
 
+  <%= render partial: "shared/navbar" %>
+
   <div class="container">
-    <%= render partial: "shared/nav_bar" %>
     <%= yield %>
   </div>
 
