--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1,7 +1,7 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
 
-$font-color: #e6e6e6;
+$font-color: #f2f2f2;
 $link-hover-color: #97979e;
 $background-color: #003cb3;
 
