Add test to make sure drug model can return rxcui

--- a/app/views/search/new.html.haml
+++ b/app/views/search/new.html.haml
@@ -17,7 +17,7 @@
   .col-md-3
   .col-md-6.text-center
     %br
-    = form_tag result_path do
+    = form_tag result_path, method: :get do
       .form-group
         = text_field_tag "drug", "eg. tylenol", maxlength: 50, class: "form-control"
       = submit_tag "Search", class: "btn btn-info"
