Change css for results page

--- a/app/views/search/new.html.haml
+++ b/app/views/search/new.html.haml
@@ -7,7 +7,7 @@
 .row
   .col-md-2
   .col-md-8.text-center
-    %h1.search-page-header Type in the name of a prescription drug below to find out if it's gluten-free:
+    %h1.search-page-header Type in the name of a prescription or OTC drug below to find out if it's gluten-free:
   .col-md-2
 
 %br
