--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -3,7 +3,7 @@
 
 $font-color: #f2f2f2;
 $link-hover-color: #97979e;
-$background-color: #003cb3;
+// $background-color: #003cb3;
 
 $header-font-size: 200%;
 $p-font-size: 150%;
@@ -11,6 +11,8 @@ $disclaimer-font-size: 50%;
 
 body {
   background-color: $background-color;
+  background-image: url("/assets/prescription.jpg");
+  background-size: 100%;
 }
 
 * {
