--- a/app/views/shared/_navbar.html.haml
+++ b/app/views/shared/_navbar.html.haml
@@ -2,7 +2,7 @@
   %li
     = link_to "Search Prescriptions", "/"
   %li
-    = link_to "About Gluscription", "/"
+    = link_to "About Gluscription", "/about"
   %li
     = link_to "Log In", "/"
   %li
