Fix font color on about page

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -11,7 +11,7 @@ $disclaimer-font-size: 50%;
 
 body {
   // background-color: $background-color;
-  background-image: url("/assets/prescription.jpg");
+  background-image: image-url("prescription");
   background-size: 100%;
 }
 
