Change how ingredient list is being checked
- Previously was splitting the list of ingredients and checking each word,
now we're checking the entire string to see if it includes the ingredient
- This allows us to check for ingredients that are longer than one word
(eg. oat flour)

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -3,6 +3,7 @@
 
 $font-color: #f2f2f2;
 $link-hover-color: #97979e;
+$well-background-color: #364563;
 // $background-color: #003cb3;
 
 $header-font-size: 200%;
