--- a/app/views/search/new.html.haml
+++ b/app/views/search/new.html.haml
@@ -33,7 +33,7 @@
   .col-md-4
   .col-md-4
     %p.search-page-text.text-center
-      = link_to "Find out how we determine if a drug is gluten-free", root_path
+      = link_to "Find out how we determine if a drug is gluten-free", about_path
   .col-md-4
 
 %br
