Add user log in via facebook

--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -1,6 +1,7 @@
 %br
 
-%h1.text-center.users-page-header Hi, username. Here are your past searches:
+%h1.text-center.users-page-header
+  = "Hi, #{current_user.name}. Here are your past searches:"
 
 %br
 %br
