--- a/app/views/shared/_navbar.html.haml
+++ b/app/views/shared/_navbar.html.haml
@@ -4,7 +4,7 @@
   %li
     = link_to "About Gluscription", "/about"
   %li
-    = link_to "Log In", "/"
+    = link_to "Log in with Facebook", "/auth/facebook"
   %li
     = link_to "Log Out", "/"
   %li
