--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,10 @@
 
   <%= render partial: "shared/navbar" %>
 
+  <% flash.each do |type, msg| %>
+    <%= content_tag :div, msg, class: "flash_#{type}" %>
+  <% end %>
+
   <div class="container">
     <%= yield %>
   </div>
