--- a/app/views/search/new.html.haml
+++ b/app/views/search/new.html.haml
@@ -36,7 +36,7 @@
   .col-md-4
   .col-md-4
     %p.search-page-text.text-center
-      = link_to "Find out how we determine if a drug is gluten-free", about_path
+      = link_to "Find out how we determine if a drug is gluten-free", about_path, class: "home-page-link"
   .col-md-4
 
 %br
