--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -13,11 +13,11 @@
       .row.text-center
         .col-md-1
         .col-md-3
-          %h2 Prescription
+          %h2 Medication
         .col-md-3
           %h2 Gluten-free?
         .col-md-3
-          %h2 Additional information
+          %h2 Suspect Ingredients
         .col-md-1
 
       .row
@@ -26,15 +26,10 @@
           %hr
         .col-md-1
 
-      .row.text-center
-        .col-md-1
-        .col-md-3
-          %p.past-search-data name
-        .col-md-3
-          %p.past-search-data Yes/No/Maybe
-        .col-md-3
-          %p.past-search-data ingredients maybeh
-        .col-md-1
+      - if !@search_results.empty?
+        = render @search_results
+      - else
+        = content_tag :p, "You don't have any saved searches yet.", class: "user-show-page-well"
 
   .col-md-1
 
