Add create action to search results controller
- Action handles ajax request and returns search
result

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -29,6 +29,7 @@ body {
   color: $font-color;
 }
 
+@import "search_results.scss";
 @import "search.scss";
 @import "users.scss";
 @import "drugs.scss";
