Change font color of drug not found notice

--- a/app/assets/stylesheets/search_results.scss
+++ b/app/assets/stylesheets/search_results.scss
@@ -3,6 +3,6 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 #result {
-  font-color: $font-color;
+  font-color: black;
   text-align: center;
 }
