--- a/app/views/search_results/new.html.haml
+++ b/app/views/search_results/new.html.haml
@@ -3,10 +3,6 @@
 %br
 %br
 %br
-%br
-%br
-
-%div#not-found-notice
 
 .row
   .col-md-2
@@ -23,7 +19,7 @@
     %br
     = form_tag search_results_path, remote: true, html: { "data-type": "html", id: "create-search-bar" }, id: "create-search-bar" do
       .form-group
-        = text_field_tag "drug", maxlength: 50, class: "form-control"
+        = text_field_tag "drug", "", maxlength: 50, class: "form-control"
       = submit_tag "Search", class: "btn btn-info"
   .col-md-3
 
@@ -35,16 +31,6 @@
 %br
 %br
 %br
-%br
-%br
-
-.row
-  .col-md-4
-  .col-md-4
-    %p.search-page-text.text-center
-      = link_to "Find out how we determine if a drug is gluten-free", about_path, class: "home-page-link"
-  .col-md-4
-
 %br
 %br
 %br
