--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -34,6 +34,11 @@ body {
   color: $font-color;
 }
 
+.search-result-well, .about-well {
+  background: rgb(0, 0, 0);
+  background: rgba(0, 0, 0, 0.5);
+}
+
 @import "search.scss";
 @import "users.scss";
 @import "drugs.scss";
