Rename drugs controller and remove drugs.scss

--- a/app/views/search_results/new.html.haml
+++ b/app/views/search_results/new.html.haml
@@ -50,11 +50,11 @@
 .row
   .col-md-3
   .col-md-6
-    .disclaimer.text-center
-      %p
+    .text-center
+      %p.disclaimer
         Drug information comes from the FDA, who provide it with the following disclaimer:
-      %p
+      %p.disclaimer
         "FDA hereby disclaim all warranties of any kind, express or implied, including without limitation the warranties of merchantability, fitness for a particular purpose, and non-infringement. FDA makes no warranty that openFDA data will be error free or that access thereto will be continuous or uninterrupted"
-      %p
+      %p.disclaimer
         Gluscription cannot therefore guarantee that the results of this site are error-free.
   .col-md-3
