--- a/app/views/searches/new.html.haml
+++ b/app/views/searches/new.html.haml
@@ -19,7 +19,7 @@
   .col-md-3
   .col-md-6.text-center
     %br
-    = form_tag search_results_path, remote: true, id: "create-search-bar" do
+    = form_tag searches_path, method: :post, remote: true, id: "create-search-bar" do
       .form-group
         = text_field_tag "drug", "", maxlength: 50, class: "form-control"
       = submit_tag "Search", class: "btn btn-info"
