--- a/app/views/searches/_search.html.haml
+++ b/app/views/searches/_search.html.haml
@@ -2,11 +2,11 @@
   .col-md-1
   .col-md-3
     %p.past-search-data
-      = search_result.medication.upcase
+      = search.medication.upcase
   .col-md-3
     %p.past-search-data
-      = search_result.gluten_free_status.capitalize
+      = search.gluten_free_status.capitalize
   .col-md-3
     %p.past-search-data
-      = search_result.suspect_ingredients_formatted
+      = search.suspect_ingredients_formatted
   .col-md-1
