--- a/app/views/about/show.html.haml
+++ b/app/views/about/show.html.haml
@@ -9,14 +9,10 @@
           %h1.text-center Who we are
           %br
           %p
-            This website is built by a
-            = link_to "student", "https://toriejw.herokuapp.com"
-            at the
+            This website was built by
+            = link_to "Torie", "https://t.co/B07c4o0Pyf"
+            as a project at the
             = link_to "Turing School of Software & Design.", "https://www.turing.io/"
-            I'm Torie, and this is my personal project for the 3rd module at Turing. My
-            grandmother and I both have celiacs, and want to make sure that our medications are gluten-free.
-            This is almost always a challenge, so I decided to make it a little easier
-            on us by building Gluscription.
         .col-md-1
 
       %br
